--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
+/*Applies to all tags of HTML page*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/*HTML body background*/
 body {
     background-color: #d9dcd6;
 }
 
+/*Header size and base color and text*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,41 +18,49 @@ body {
     color: #ffffff;
 }
 
+/*Heading of header base size*/
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
+/*"seo" of "Horiseon" color change*/
 .header h1 .seo {
     color: #d9dcd6;
 }
 
+/*Navigation links of header*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    font-size: 21px;
 }
 
+/*Navigation links list*/
 .header nav ul {
     list-style-type: none;
 }
 
+/*Navigation links items*/
 .header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/*Customize Hyperlinks */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/*Base text size */
 p {
     font-size: 16px;
 }
 
+/*Site image*/
 .hero {
     height: 800px;
     width: 100%;
@@ -59,22 +70,47 @@ p {
     background-position: center;
 }
 
+/*Left content column*/
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/*Right content column*/
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
+/*Main content*/
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/*Main content entries*/
+.content-post{
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/*Main content images*/
+.content-post img {
+    max-height: 200px;
+}
+
+/*Main contents headings*/
+.content-post h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*Side content*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -82,94 +118,30 @@ p {
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    background-color: #2589bd
 }
 
-.benefit-lead {
+/*Side content entries*/
+.benefit{
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/*Side content headings*/
+.benefit h3{
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/*Side content images*/
+.benefit img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-#search-engine-optimization, #online-reputation-management, #social-media-marketing{
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-#search-engine-optimization img {
-    max-height: 200px;
-}
-
-#online-reputation-management img {
-    max-height: 200px;
-}
-
-#social-media-marketing img {
-    max-height: 200px;
-}
-
-#search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/*Footer*/
 .footer {
     padding: 30px;
     clear: both;
@@ -177,6 +149,7 @@ p {
     text-align: center;
 }
 
+/*Footer text*/
 .footer h2 {
     font-size: 20px;
 }
