--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ a {
 /*Base text size */
 p {
     font-size: 16px;
+    
 }
 
 /*Site image*/
@@ -119,7 +120,7 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-    background-color: #2589bd
+    background-color: #227dad
 }
 
 /*Side content entries*/
